--- a/livekit-server/values.yaml
+++ b/livekit-server/values.yaml
@@ -38,12 +38,21 @@ loadBalancer:
     enabled: true
     # secretName: ""
 
+# when true (default), optimizes network stack for service
+# increases UDP send and receive buffers
+optimizeNetwork: true
+
 autoscaling:
   enabled: false
   minReplicas: 1
   maxReplicas: 5
   targetCPUUtilizationPercentage: 60
   # targetMemoryUtilizationPercentage: 80
+
+# if LiveKit should run only on specific nodes
+# this can be used to isolate designated nodes
+nodeSelector: {}
+  # node.kubernetes.io/instance-type: c5.2xlarge
 
 resources: {}
   # Due to port restrictions, you can run only one instance of LiveKit per physical
