--- a/values-sample.yaml
+++ b/values-sample.yaml
@@ -28,9 +28,29 @@ loadBalancer:
     # set to enabled if desired. TLS is only supported with ALB today
     enabled: true
 
+# when true (default), optimizes network stack for service
+# increases UDP send and receive buffers
+# optimizeNetwork: true
+
+# autoscaling requires resources to be defined
 autoscaling:
   # set to true to enable autoscaling. when set, ignores replicaCount
   enabled: false
   minReplicas: 1
   maxReplicas: 5
   targetCPUUtilizationPercentage: 60
+
+# if LiveKit should run only on specific nodes
+# this can be used to isolate designated nodes
+nodeSelector: {}
+  # node.kubernetes.io/instance-type: c5.2xlarge
+
+resources: {}
+  # Due to port restrictions, you can run only one instance of LiveKit per physical
+  # node. Because of that, we recommend giving it plenty of resources to work with
+  # limits:
+  #   cpu: 6000m
+  #   memory: 2048Mi
+  # requests:
+  #   cpu: 4000m
+  #   memory: 1024Mi
