--- a/livekit-server/templates/daemonset.yaml
+++ b/livekit-server/templates/daemonset.yaml
@@ -17,6 +17,10 @@ spec:
         app.kubernetes.io/instance: {{ .Release.Name }}
     spec:
       hostPID: true
+      {{- with .Values.nodeSelector }}
+      nodeSelector:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
       containers:
       - name: daemonset
         image: gcr.io/google-containers/startup-script:v2
@@ -29,10 +33,17 @@ spec:
             #! /bin/bash
             set -x
             sysctl -w vm.max_map_count=262144
-            sysctl -w net.core.somaxconn=1024
-            sysctl -w net.core.netdev_max_backlog=5000
-            sysctl -w net.core.rmem_max=16777216
-            sysctl -w net.core.wmem_max=16777216
+            sysctl -w fs.file-max=2097152
+            sysctl -w net.core.somaxconn=65535
+            sysctl -w net.core.netdev_max_backlog=65536
+            sysctl -w net.core.optmem_max=25165824
+            sysctl -w net.core.rmem_max=25165824
+            sysctl -w net.core.wmem_max=25165824
+            sysctl -w net.core.rmem_default=1048576
+            sysctl -w net.core.wmem_default=1048576
+            sysctl -w net.ipv4.udp_mem="65536 131072 262144"
+            sysctl -w net.ipv4.udp_rmem_min=16384
+            sysctl -w net.ipv4.udp_wmem_min=16384
             sysctl -w net.ipv4.tcp_tw_reuse=1
             sysctl -w fs.inotify.max_user_instances=524288
             echo "done"
