--- a/livekit-server/templates/service.yaml
+++ b/livekit-server/templates/service.yaml
@@ -8,9 +8,12 @@ metadata:
   annotations:
     service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
     service.beta.kubernetes.io/aws-load-balancer-type: nlb
+  {{- else if eq .Values.loadBalancer.type "gke" }}
+  annotations:
+    cloud.google.com/backend-config: '{"ports": {"{{ .Values.loadBalancer.servicePort }}":"{{ include "livekit-server.fullname" . }}"}}'
   {{- end }}
 spec:
-  {{- if eq .Values.loadBalancer.type "alb" }}
+  {{- if or (eq .Values.loadBalancer.type "alb") (eq .Values.loadBalancer.type "gke") }}
   type: NodePort
   {{- else if eq .Values.loadBalancer.type "aws" }}
   type: LoadBalancer
