--- a/livekit-server/templates/deployment.yaml
+++ b/livekit-server/templates/deployment.yaml
@@ -36,12 +36,12 @@ spec:
                 configMapKeyRef:
                   name: {{ include "livekit-server.fullname" . }}
                   key: config.yaml
-            { { - if .Values.livekit.turn.enabled } }
+            {{- if .Values.livekit.turn.enabled }}
             - name: LIVEKIT_TURN_CERT
-              value: {{ printf "%s/tls.cert" .Values.livekit.turn.mount_path }}
+              value: /etc/lkcert/tls.crt
             - name: LIVEKIT_TURN_KEY
-              value: {{ printf "%s/tls.key" .Values.livekit.turn.mount_path }}
-            { { - end } }
+              value: /etc/lkcert/tls.key
+            {{- end }}
           ports:
             - name: http
               containerPort: {{ .Values.livekit.port }}
@@ -64,18 +64,18 @@ spec:
               port: http
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
-          { { - if .Values.livekit.turn.enabled } }
+          {{- if .Values.livekit.turn.enabled }}
           volumeMounts:
             - name: lkturncert
               mountPath: /etc/lkcert
               readOnly: true
-          { { - end } }
-      { { - if .Values.livekit.turn.enabled } }
+          {{- end }}
+      {{- if .Values.livekit.turn.enabled }}
       volumes:
         - name: lkturncert
           secret:
             secretName: {{ required "tls secret required if turn enabled" .Values.livekit.turn.secretName }}
-      { { - end } }
+      {{- end }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
