--- a/values-sample.yaml
+++ b/values-sample.yaml
@@ -16,6 +16,16 @@ livekit:
   # one or more API key/secret pairs
   keys:
     myapikey: "myapisecret"
+  turn:
+    enabled: true
+    # must match domain of your tls cert
+    domain: turn.myhost.com
+    # must be 443 if turn load balancer is disabled
+    tls_port: 3478
+    secretName: <tlssecret>
+    # valid values: disable, aws, gke
+    # tls cert and domain are required, even when load balancer is disabled
+    loadBalancerType: disable
 
 loadBalancer:
   # create
