--- a/livekit-server/templates/turnloadbalancer.yaml
+++ b/livekit-server/templates/turnloadbalancer.yaml
@@ -1,4 +1,4 @@
-{{- if or (eq .Values.loadBalancer.type "aws") (eq .Values.loadBalancer.type "gke") }}
+{{- if or (eq .Values.livekit.turn.loadBalancerType "aws") (eq .Values.livekit.turn.loadBalancerType "gke") }}
 apiVersion: v1
 kind: Service
 metadata:
