--- a/livekit-server/values.yaml
+++ b/livekit-server/values.yaml
@@ -14,6 +14,8 @@ livekit:
   log_level: info
   rtc:
     tcp_port: 7881
+    port_range_start: 50000
+    port_range_end: 60000
     use_external_ip: true
   redis: {}
     # address:
