--- a/livekit-server/templates/deployment.yaml
+++ b/livekit-server/templates/deployment.yaml
@@ -58,11 +58,19 @@ spec:
               hostPort: {{ .Values.livekit.rtc.tcp_port }}
               protocol: TCP
             {{- end }}
-            {{- if .Values.livekit.turn.enabled }}
+            {{- if and .Values.livekit.turn.enabled }}
+            {{- if .Values.livekit.turn.tls_port }}
             - name: turn-tls
               containerPort: {{ .Values.livekit.turn.tls_port }}
               hostPort: {{ .Values.livekit.turn.tls_port }}
               protocol: UDP
+            {{- end }}
+            {{- if .Values.livekit.turn.udp_port }}
+            - name: turn-udp
+              containerPort: {{ .Values.livekit.turn.udp_port }}
+              hostPort: {{ .Values.livekit.turn.udp_port }}
+              protocol: UDP
+            {{- end }}
             {{- end }}
           livenessProbe:
             httpGet:
