1 hour termination grace period

--- a/livekit-server/templates/deployment.yaml
+++ b/livekit-server/templates/deployment.yaml
@@ -24,6 +24,7 @@ spec:
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       hostNetwork: true
+      terminationGracePeriodSeconds: 3600 # 1 hour
       containers:
         - name: {{ .Chart.Name }}
           securityContext:
