--- a/livekit-server/Chart.yaml
+++ b/livekit-server/Chart.yaml
@@ -1,9 +1,9 @@
 apiVersion: v2
 name: livekit-server
-description: LiveKit is a distributed WebRTC server.
+description: Open source WebRTC infrastructure. Host your own real-time video/audio experiences.
 type: application
-version: 0.14.2
-appVersion: "v0.14.2"
+version: 0.15.1
+appVersion: "v0.15.1"
 
 sources:
   - https://github.com/livekit/livekit-server
