adding gcp managed cert option

--- a/livekit-server/templates/ingress.yaml
+++ b/livekit-server/templates/ingress.yaml
@@ -19,6 +19,12 @@ metadata:
     alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
     {{- end }}
   {{- end }}
+  {{- if eq .Values.loadBalancer.type "gke-managed-cert" }}
+  annotations:
+    kubernetes.io/ingress.global-static-ip-name: {{ .Values.loadBalancer.staticIpName }}
+    networking.gke.io/managed-certificates: managed-cert
+    kubernetes.io/ingress.class: "gce"
+  {{- end }}
 {{- with .Values.loadBalancer }}
 spec:
   backend:
