--- a/livekit-server/templates/turnloadbalancer.yaml
+++ b/livekit-server/templates/turnloadbalancer.yaml
@@ -1,5 +1,5 @@
 {{- if and .Values.livekit.turn.enabled .Values.livekit.turn.tls_port }}
-{{- if or (eq .Values.livekit.turn.loadBalancerType "aws") (eq .Values.livekit.turn.loadBalancerType "gke") }}
+{{- if or (eq .Values.livekit.turn.loadBalancerType "aws") (eq .Values.livekit.turn.loadBalancerType "gke") (eq .Values.livekit.turn.loadBalancerType "gke-managed-cert") }}
 apiVersion: v1
 kind: Service
 metadata:
